# triskel

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/diagrams/: GithubSteps.drawio
bindings/python/: .gitignore  CMakeLists.txt  README.md  build_wheels.sh  pyproject.toml  pytriskel.cpp  setup.py
bindings/python/pytriskel/: __init__.pyi  pytriskel.pyi
cmake/: FindCairo.cmake
docker/fedora/: Dockerfile  dependencies.sh  imgui.CMakeLists.txt
docker/manylinux/: Dockerfile
lib/: CMakeLists.txt
lib/include/triskel/: internal.hpp  triskel.hpp
lib/include/triskel/analysis/: dfs.hpp  lengauer_tarjan.hpp  patriarchal.hpp  sese.hpp  udfs.hpp
lib/include/triskel/datatypes/: rtree.hpp  rtree.ipp
lib/include/triskel/graph/: graph.hpp  graph_view.hpp  igraph.hpp  subgraph.hpp
lib/include/triskel/layout/: ilayout.hpp  layout.hpp  phantom_nodes.hpp
lib/include/triskel/layout/sugiyama/: layer_assignement.hpp  network_simplex.hpp  sugiyama.hpp  vertex_ordering.hpp
lib/include/triskel/llvm/: llvm.hpp
lib/include/triskel/utils/: attribute.hpp  constants.hpp  point.hpp  tree.hpp
lib/src/: CMakeLists.txt  triskel.cpp
lib/src/analysis/: CMakeLists.txt  dfs.cpp  lengauer_tarjan.cpp  patriarchal.cpp  sese.cpp  udfs.cpp
lib/src/graph/: CMakeLists.txt  graph.cpp  graph_view.cpp  igraph.cpp  subgraph.cpp
lib/src/layout/: CMakeLists.txt  ilayout.cpp  layout.cpp  phantom_nodes.cpp
lib/src/layout/sugiyama/: CMakeLists.txt  network_simplex.cpp  sugyiama.cpp  tamassia.cpp  vertex_ordering.cpp
lib/src/llvm/: CMakeLists.txt  llvm.cpp  triskel.cpp
lib/src/renderer/: CMakeLists.txt  cairo.cpp  imgui.cpp
test/: CMakeLists.txt  triskel_test.cpp
test/analysis/: CMakeLists.txt  dfs_test.cpp  lengauer_tarjan_test.cpp
test/analysis/sugiyama/: CMakeLists.txt  network_simplex_test.cpp
test/datatypes/: CMakeLists.txt  rtree_test.cpp
test/graph/: CMakeLists.txt  attribute_test.cpp  graph_editor_test.cpp  graph_test.cpp  subgraph_test.cpp
